--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="Styles.Css">
 </head>
 <body>
-    <h1>The Goat is James Eubanks, also known as Clayster.</h1>
-    <img class="clay1" src="https://pbs.twimg.com/profile_images/1306997346299981824/Jul9Isp2_400x400.jpg"/>
+    <h1>The Goat is James Eubanks, also known as Clayster.
+    <img class="clay1" src="https://pbs.twimg.com/profile_images/1306997346299981824/Jul9Isp2_400x400.jpg"/></h1>
     <p>James "Clayster" Eubanks is a Call of Duty esports player, currently a player for New York Subliners. 
-        He is a 2015, 2019, and 2020 World Champion, and the 2015 World Championship MVP. </p>
+        He is a 2015, 2019, and 2020 World Champion, and the 2015 World Championship MVP. <a href="https://cod-esports.gamepedia.com/Clayster#:~:text=James%20%22Clayster%22%20Eubanks%20is%20a,%2C%20eUnited%2C%20and%20Dallas%20Empire.">Link to Claysters Wiki</a>
     <img class="clay2" src="https://pbs.twimg.com/profile_images/1206978960984330242/9Fw3VTcY.jpg"/>
-    <img class="clay3" src="https://scufgaming.com/media/wysiwyg/affiliates_v2/clayster/affiliate_detail_clayster_gallery_2_1.jpg"/>
+    <img class="clay3" src="https://scufgaming.com/media/wysiwyg/affiliates_v2/clayster/affiliate_detail_clayster_gallery_2_1.jpg"/></p>
 </body>
 </html>
