--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>The Goat is James Eubanks, also known as Clayster.
-    <br><img class="clay1" src="https://i.imgur.com/Qt96CRL.jpg"/>
+    <br><img class="clay1" src="Clay1.jpg"/>
     <br><p>James "Clayster" Eubanks is a Call of Duty esports player, currently a player for New York Subliners. 
         He is a 2015, 2019, and 2020 World Champion, and the 2015 World Championship MVP. <br><a href="https://cod-esports.gamepedia.com/Clayster#:~:text=James%20%22Clayster%22%20Eubanks%20is%20a,%2C%20eUnited%2C%20and%20Dallas%20Empire.">Link to Claysters Wiki</a></p>
-    <p><img class="clay2" src="https://i.imgur.com/TVple0i.jpg"/>
-    <img class="clay3" src="https://i.imgur.com/BZQarnZ.jpg"/>
+    <p><img class="clay2" src="Clay2.jpg"/>
+    <img class="clay3" src="Clay3.jpg"/>
     <br><a class="stats" href="https://codstats.net/profile/ps4/Claaayster">Clayster's stats</a></p></h1>
 </body>
 </html>
