--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who_is_the_goat</title>
+    <title>Who is the goat</title>
     <link rel="stylesheet" href="Styles.Css">
 </head>
 <body>
-    <h1>The Goat is James Eubanks, also known as Clayster.
-    <br><img class="clay1" src="Clay1.jpg"/>
-    <br><p>James "Clayster" Eubanks is a Call of Duty esports player, currently a player for New York Subliners. 
-        He is a 2015, 2019, and 2020 World Champion, and the 2015 World Championship MVP. <br> CLayster has placed number 1 in many tournaments such as:<br><a href="https://cod-esports.gamepedia.com/Call_of_Duty_League_Championship_2020">Call of Duty League Championship 2020(Modern Warfare)</a>
-    <br><a href="https://cod-esports.gamepedia.com/CWL/2019_Season/Pro_League/Playoffs">CWL Pro League 2019 Playoffs(Modern Warfare)</a>
-    <br><a href="https://cod-esports.gamepedia.com/Call_of_Duty_World_League_Championship_2019">Call of Duty World League Championship 2019(Black ops 4)</a>
-    <br><a href="https://cod-esports.gamepedia.com/Clayster#:~:text=James%20%22Clayster%22%20Eubanks%20is%20a,%2C%20eUnited%2C%20and%20Dallas%20Empire.">Link to Claysters Wiki</a></p>
-    <p><img class="clay2" src="Clay2.jpg"/>
-    <img class="clay3" src="Clay3.jpg"/>
-    <br><a class="stats" href="https://codstats.net/profile/ps4/Claaayster">Clayster's stats</a></p></h1>
+    <div id="main">
+        <h1>The Goat is James Eubanks, also known as Clayster.</h1>
+        <br><img class="clay1" src="Clay1.jpg"/>
+        <br><p>James "Clayster" Eubanks is a Call of Duty esports player, currently a player for New York Subliners. 
+            He is a 2015, 2019, and 2020 World Champion, and the 2015 World Championship MVP. <br> CLayster has placed number 1 in many tournaments such as:<br><a href="https://cod-esports.gamepedia.com/Call_of_Duty_League_Championship_2020">Call of Duty League Championship 2020(Modern Warfare)</a>
+        <br><a href="https://cod-esports.gamepedia.com/CWL/2019_Season/Pro_League/Playoffs">CWL Pro League 2019 Playoffs(Modern Warfare)</a>
+        <br><a href="https://cod-esports.gamepedia.com/Call_of_Duty_World_League_Championship_2019">Call of Duty World League Championship 2019(Black ops 4)</a>
+        <br><a href="https://cod-esports.gamepedia.com/Clayster#:~:text=James%20%22Clayster%22%20Eubanks%20is%20a,%2C%20eUnited%2C%20and%20Dallas%20Empire.">Link to Claysters Wiki</a></p>
+        <img class="clay2" src="Clay2.jpg"/>
+        <img class="clay3" src="Clay3.jpg"/>
+        <br><a class="stats" href="https://codstats.net/profile/ps4/Claaayster">Clayster's stats</a>
+    </div>
 </body>
 </html>
